Fixing Cluster Settings layout (#651)
* A bit of cleaning in Add Cluster page


* Adding head-col to WizardLayout


* Fixing Cluster Settings general layout bugs


* Cluster Status view refactoring


* Install Metrics component refactoring

Using notifications for error, removed picking
button icon method, simplified button generation.


* Remove icons / checks from RemoveClusterButton


* Fixing colorError in Input styles


* Preventing Input's spellchecking


* ClusterNameSettings refactoring


* ClusterWorkspaceSettings refactoring/fixing


* ClusterProxySetting refactoring


* ClusterPrometheusSetting refactoring


* Clean up Removal section


* Glued InstallMetrics & InstallUserMode into 1 component


* Removing unused styles in Cluster Settings


* Cluster Settings styling


* Adding close button to settings header


* ClusterHomeDirSetting refactoring


* FilePicker restyling


* Fixing Prometheus selector


* Fixing Hashicon

Passing cluster name instead of cluster id to prevent
icon changing while typing new
cluster name


* Minor ClusterSettings fixes


* Increasing opacity for non-interactive icons


* Keep feature install loading state

Waiting for props to change before
disabling loading state (gray button
width spinner)


* Remove arrays in disposeOnUnmount()


* Fix Cluster select behavior

Now clicking cluster icon in sidebar
always leads to / dashboard. And
'Settings' submenu switches active
cluster at first and only the showing
Cluster Settings


* Using structuralComparator in feature installer


* Saving input fields on blur


* Setting Select color same as Input color

--- a/src/renderer/components/+cluster-settings/cluster-settings.scss
+++ b/src/renderer/components/+cluster-settings/cluster-settings.scss
@@ -1,86 +1,85 @@
 .ClusterSettings {
-    overflow-y: scroll;
-    grid-template-columns: unset;
+  grid-template-columns: unset;
+  padding: 0;
 
-    .info-col {
-        display: none;
+  .head-col {
+    justify-content: space-between;
+
+    :nth-child(2) {
+      flex: 1 0 0;
     }
 
-    .content-col {
-        margin-right: unset;
+    a {
+      text-decoration: none;
+      color: $grey-600;
+    }
+  }
+
+  .info-col {
+    display: none;
+  }
+
+  .content-col {
+    margin: 0;
+    padding-top: $padding * 3;
+    background-color: transparent;
+
+    .SubTitle {
+      text-transform: none;
     }
 
-    * {
-        margin-top: 40px;
+    .settings-wrapper {
+      margin: 0 auto;
+      width: 60%;
+      min-width: 570px;
+      max-width: 1000px;
 
-        &:first-child {
-            margin-top: 0px;
-        }
-    }
+      > div {
+        margin-top: $margin * 5;
+      }
 
-    h4 {
-        margin-top: 20px;
-    }
-
-    .status-table {
-        margin-top: 20px;
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-gap: 10px;
-    }
-
-    .loading {
-        margin-top: 20px;
-        text-align: center;
-
-        .Spinner {
-            display: inline-block;
-        }
-    }
-
-    .Input,.Select {
-        margin-top: 10px;
-    }
-
-    .Icon:not(.updated):not(.clean) {
-        color: #ad0000;
-    }
-
-    .Icon.updated {
-        color: #00dd1d;
-    }
-
-    .updated {
-        animation: updated-name 1s 1;
-        animation-fill-mode: forwards;
-        animation-delay: 3s;
-    }
-
-    @keyframes updated-name {
-        from {opacity :1;}
-        to {opacity :0;}
-    }
-
-    .center {
-        text-align: center;
-    }
-
-    input[type="text"]::placeholder {
+      .admin-note {
         font-size: small;
-        color: #707070;
+        opacity: 0.5;
+        margin-left: $margin;
+      }
+
+      .button-area {
+        margin-top: $margin * 2;
+      }
     }
 
-    input[type="text"] {
-        color: white;
+    .file-loader {
+      margin-top: $margin * 2;
     }
 
-    button {
-        margin-top: 5px;
+    .hint {
+      font-size: smaller;
+      opacity: 0.8;
+    }
+  }
 
-        .Spinner {
-            width: 10px;
-            height: 10px;
-            border-color: transparent black;
+  .status-table {
+    margin: $margin * 3 0;
+
+    .Table {
+      border: 1px solid var(--drawerSubtitleBackground);
+      border-radius: $radius;
+
+      .TableRow {
+        &:not(:last-of-type) {
+          border-bottom: 1px solid var(--drawerSubtitleBackground);
         }
+
+        .value {
+          flex-grow: 2;
+          color: var(--textColorSecondary);
+        }
+      }
     }
+  }
+
+  .Input,.Select {
+    margin-top: 10px;
+  }
 }
